Add Matryoshka tools